<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <EditText
            android:id="@+id/ra_et_pass"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/ra_et_password_text"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ra_et_user" />

        <Button
            android:id="@+id/ra_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ra_btn_back_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ra_btn_signUp" />

        <EditText
            android:id="@+id/ra_et_user"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="@string/ra_et_user_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ra_btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ra_btn_signup_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ra_et_retypePass" />

        <EditText
            android:id="@+id/ra_et_retypePass"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/ra_et_retypePassword_text"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ra_et_pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>