<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".QueryActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="366dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:text="@string/aq_insert_query_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/qa_query"
                android:layout_width="303dp"
                android:layout_height="204dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="Select * from personas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/qa_btn_delete_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/aq_btn_delete_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qa_query" />

            <Button
                android:id="@+id/qa_btn_execute_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/aq_btn_exec_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qa_query" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/qa_et_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"></TextView>
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>



        <!--
        <ImageView
            android:id="@+id/image_query"
            android:layout_width="376dp"
            android:layout_height="284dp"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_query"
            app:srcCompat="@drawable/sql_server_select_into_example" />
        -->


</layout>